# data_engineering_assignment

./: .gitignore  README.md  import_quarter.py  init_db.py  requirements.txt  setup.cfg  stress_test.py
.devcontainer/: devcontainer.json  docker-compose.yml
flaskr/: __init__.py  campaign.py  db.py  index.py  schema.sql
flaskr/templates/: base.html  index.html  not_found.html
flaskr/templates/campaigns/: campaign.html
tests/: data.sql  test_flaskr.py
