[metadata]
name = campaigner
version = 1.0.0
url = https://github.com/rekino/data_engineering_assignment
license = BSD-3-Clause
maintainer = Ramin Barati
maintainer_email = rekino@gmail.com
description = The assignment for data engineering position at DataChef.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask, psycopg2

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests